Fix page jump margins

--- a/generator/_includes/style.css
+++ b/generator/_includes/style.css
@@ -112,3 +112,8 @@ summary {
 #error {
     color: red;
 }
+
+h3 {
+    padding-top: 40px;
+    margin-top: -20px;
+}
